--- a/fruit-stories/strawberry-season.html
+++ b/fruit-stories/strawberry-season.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
 
 	<!-- title -->
-	<title>購物專區</title>
+	<title>好果實，等對的季節才能品嚐。</title>
 
 	<!-- favicon -->
 	<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
@@ -15,21 +15,21 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
 	<!-- fontawesome -->
-	<link rel="stylesheet" href="assets/css/all.min.css">
+	<link rel="stylesheet" href="../assets/css/all.min.css">
 	<!-- bootstrap -->
-	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
 	<!-- owl carousel -->
-	<link rel="stylesheet" href="assets/css/owl.carousel.css">
+	<link rel="stylesheet" href="../assets/css/owl.carousel.css">
 	<!-- magnific popup -->
-	<link rel="stylesheet" href="assets/css/magnific-popup.css">
+	<link rel="stylesheet" href="../assets/css/magnific-popup.css">
 	<!-- animate css -->
-	<link rel="stylesheet" href="assets/css/animate.css">
+	<link rel="stylesheet" href="../assets/css/animate.css">
 	<!-- mean menu css -->
-	<link rel="stylesheet" href="assets/css/meanmenu.min.css">
+	<link rel="stylesheet" href="../assets/css/meanmenu.min.css">
 	<!-- main style -->
-	<link rel="stylesheet" href="assets/css/main.css">
+	<link rel="stylesheet" href="../assets/css/main.css">
 	<!-- responsive -->
-	<link rel="stylesheet" href="assets/css/responsive.css">
+	<link rel="stylesheet" href="../assets/css/responsive.css">
 
 </head>
 <body>
@@ -60,17 +60,17 @@
 						<nav class="main-menu">
 							<!-- 桌機板清單 -->
 							<ul>
-								<li ><a href="home.html">首頁</a></li>
-								<li><a href="about.html">我們的理念</a></li>
-								<li><a href="news.html">水果新鮮報</a>
+								<li ><a href="../home.html">首頁</a></li>
+								<li><a href="../about.html">我們的理念</a></li>
+								<li><a href="../news.html">水果新鮮報</a>
 								</li>
-								<li><a href="contact.html">聯絡資訊</a></li>
-								<li class="current-list-item"><a href="shop.html">購物專區</a></li>
+								<li><a href="../contact.html">聯絡資訊</a></li>
+								<li><a href="../shop.html">購物專區</a></li>
 								<!-- 購物車和搜尋 -->
 								<li>
 									<div class="header-icons">
 										<!-- 購物車 -->
-										<a class="shopping-cart" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+										<a class="shopping-cart" href="../cart.html"><i class="fas fa-shopping-cart"></i></a>
 										<!-- 搜尋部分 -->
 										<a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a>
 									</div>
@@ -112,112 +112,76 @@
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
-						<p>當季現摘</p>
-						<h1>購物專區</h1>
+						<p>閱讀詳情</p>
+						<h1>好果實，等對的季節才能品嚐。</h1>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 	<!-- end breadcrumb section -->
-
-	<!-- products -->
-	<div class="product-section mt-150 mb-150">
+	
+	<!-- single article section -->
+	<div class="mt-150 mb-150">
 		<div class="container">
-
 			<div class="row">
-                <div class="col-md-12">
-                    <div class="product-filters">
-                        <ul>
-                            <li class="active" data-filter="*">全部</li>
-                            <li data-filter=".strawberry">草莓</li>
-                            <li data-filter=".berry">葡萄</li>
-                            <li data-filter=".lemon">檸檬</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+				<div class="col-lg-2"></div>
+				<div class="col-lg-8">
+					<div class="single-article-section">
+						<div class="single-article-text">
+							<div class="single-artcile-bg"></div>
+							<p class="blog-meta">
+								<span class="author"><i class="fas fa-user"></i> 誠哥選果</span>
+								<span class="date"><i class="fas fa-calendar"></i> 2025/06/01</span>
+							</p>
+							<h2>耐心等待，只為那一口剛剛好的甜。</h2>
+							<p>
+								草莓不是隨時都有，真正甜美的果實，只在對的時節成熟。大湖的草莓便是如此，從入冬後的低溫開始醞釀，歷經朝霧露水與日夜溫差的洗禮，才能孕育出果肉飽滿、香氣濃郁的紅寶石。這不是大量溫室催熟的果實，而是來自土地與氣候共同雕刻的天然風味。
+							</p>
+							<p>
+								菜式水果堅持不販售過早採收的草莓，因為我們知道，錯過最佳熟成點，即便外觀再紅潤，也失去了那「剛剛好」的甜與酸。選擇在正確的時間出貨，意味著你收到的每一盒草莓，都是來自產季高峰、農人眼中的珍品。
+							</p>
+							<p>
+								在這個什麼都講求快的時代，我們反其道而行，守住那份對「真正好果實」的執著。因為值得等待的，不只是一口滋味，而是對品質的信任。
+							</p>
+						</div>
 
-			<div class="row product-lists">
-				<div class="col-lg-4 col-md-6 text-center strawberry">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-1.jpg" alt=""></a>
+						<div class="comments-list-wrap">
+							<h3 class="comment-count-title">1 評論</h3>
+							<div class="comment-list">
+								<div class="single-comment-body">
+									<div class="comment-user-avater">
+										<img src="../assets/img/avaters/avatar1.png" alt=""> 
+									</div>
+									<div class="comment-text-body">
+										<h4>Ray <span class="comment-date">2025/06/01</span> <a href="#">回覆</a></h4>
+										<p>去年吃過你們的大湖草莓，真的又甜又香，現在看完這篇文章又想訂了！</p>
+									</div>
+								</div>
+							</div>
 						</div>
-						<h3>草莓</h3>
-						<p class="product-price"><span>每斤</span> 220元 </p>
-						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i>加入購物車</a>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 text-center berry">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-2.jpg" alt=""></a>
-						</div>
-						<h3>葡萄</h3>
-						<p class="product-price"><span>每斤</span> 120元 </p>
-						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> 加入購物車</a>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 text-center lemon">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-3.jpg" alt=""></a>
-						</div>
-						<h3>檸檬</h3>
-						<p class="product-price"><span>每斤</span> 35元</p>
-						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i>加入購物車</a>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 text-center">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-4.jpg" alt=""></a>
-						</div>
-						<h3>奇異果</h3>
-						<p class="product-price"><span>5顆</span> 100元 </p>
-						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> 加入購物車</a>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 text-center">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-5.jpg" alt=""></a>
-						</div>
-						<h3>青蘋果</h3>
-						<p class="product-price"><span>每顆</span> 100元 </p>
-						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> 加入購物車</a>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 text-center strawberry">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-6.jpg" alt=""></a>
-						</div>
-						<h3>覆盆莓</h3>
-						<p class="product-price"><span>1包</span> 139元 </p>
-						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> 加入購物車</a>
-					</div>
-				</div>
-			</div>
 
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<div class="pagination-wrap">
-						<ul>
-							<li><a href="#">Prev</a></li>
-							<li><a class="active" href="#">1</a></li>
-							<li><a href="#">2</a></li>
-							<li><a href="#">3</a></li>
-							<li><a href="#">Next</a></li>
-						</ul>
+						<div class="comment-template">
+							<h4>發表評論</h4>
+							<p>如果您有任何意見，請隨時向我們發送您的意見。</p>
+							<form action="index.html">
+								<p>
+									<input type="text" placeholder="你的 名字">
+									<input type="email" placeholder="你的 Email">
+								</p>
+								<p><textarea name="comment" id="comment" cols="30" rows="10" placeholder="你的留言"></textarea></p>
+								<p><input type="submit" value="發表"></p>
+							</form>
+						</div>
 					</div>
 				</div>
+				
 			</div>
 		</div>
 	</div>
-	<!-- end products -->
+	<!-- end single article section -->
 
+	
 	<!-- footer -->
 	<div class="footer-area">
 		<div class="container">
@@ -255,6 +219,8 @@
 		</div>
 	</div>
 	<!-- end footer -->
+
+	
 	
 	<!-- copyright -->
 	<div class="copyright">
@@ -281,25 +247,25 @@
 	<!-- end copyright -->
 	
 	<!-- jquery -->
-	<script src="assets/js/jquery-1.11.3.min.js"></script>
+	<script src="../assets/js/jquery-1.11.3.min.js"></script>
 	<!-- bootstrap -->
-	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+	<script src="../assets/bootstrap/js/bootstrap.min.js"></script>
 	<!-- count down -->
-	<script src="assets/js/jquery.countdown.js"></script>
+	<script src="../assets/js/jquery.countdown.js"></script>
 	<!-- isotope -->
-	<script src="assets/js/jquery.isotope-3.0.6.min.js"></script>
+	<script src="../assets/js/jquery.isotope-3.0.6.min.js"></script>
 	<!-- waypoints -->
-	<script src="assets/js/waypoints.js"></script>
+	<script src="../assets/js/waypoints.js"></script>
 	<!-- owl carousel -->
-	<script src="assets/js/owl.carousel.min.js"></script>
+	<script src="../assets/js/owl.carousel.min.js"></script>
 	<!-- magnific popup -->
-	<script src="assets/js/jquery.magnific-popup.min.js"></script>
+	<script src="../assets/js/jquery.magnific-popup.min.js"></script>
 	<!-- mean menu -->
-	<script src="assets/js/jquery.meanmenu.min.js"></script>
+	<script src="../assets/js/jquery.meanmenu.min.js"></script>
 	<!-- sticker js -->
-	<script src="assets/js/sticker.js"></script>
+	<script src="../assets/js/sticker.js"></script>
 	<!-- main js -->
-	<script src="assets/js/main.js"></script>
+	<script src="../assets/js/main.js"></script>
 
 </body>
 </html>
